# Sirius

./: .env  .gdb_history  .gitattributes  .gitignore  .gitmodules  0.npz  0_float32.npz  CMakeLists.txt  Dockerfile  README.md  a.out  client-log  docker.sh  environment.yaml  meepo5_cuda_env.sh  op_maybe_impl  predict.npz  requirements.txt  resnet-autotuner.json  resnet-predict.npz  run_llm.sh  serlog-debug  server-log  server-log-2  server-log-3  test_nn.py  test_triton.py  train-profile.csv
artifact-evaluation/: README.md
client/: CMakeLists.txt  async_client.cc  busy_loop_launcher.cc  client.cc  hybrid_workload.cc  test_include.cc  workload_launcher.cc
client/data/sharegpt/: prompt_with_length_llama2.json  prompt_with_length_llama3.json
client/src/: CMakeLists.txt  busy_loop_launcher.cc  workload_launcher.cc
client/src/workload/: colsys_impl.cc  colsys_impl.h  sirius_impl.cc  sirius_impl.h  triton_impl.cc  triton_impl.h  util.cc  util.h  warm_cache.cc  warm_cache.h  workload.cc.in  workload.h  workload.h.in
client/trtion/: CMakeLists.txt
client/workload/: colsys_grpc.h  colsys_impl.cc  colsys_impl.h  infer_trace.py  triton_grpc.h  triton_impl.cc  triton_impl.h  unified_grpc.h  util.cc  util.h  warm_cache.cc  warm_cache.h  workload.cc  workload.cc.in  workload.h  workload.h.in
cmake/: boost.cmake  cudnn.cmake  glog.cmake  grpc.cmake  xsched.cmake
common/: CMakeLists.txt  _block_queue.h  block_queue.h  controlling.h  cuda_allocator.cc  cuda_allocator.h  device_manager.cc  device_manager.h  dtype_helper.cc  generic_allocator.cc  generic_allocator.h  init.cc  init.h  log_as_glog_sta.h  mempool.cc  mempool.h  mempool_sampler.h  shape_helper.cc  shape_helper.h  sm_partition.cc  sm_partition.cu  sm_partition.h  tensor.cc  tensor.h  tensor_methods.cc  tensor_methods.h  torch_allocator.cc  torch_allocator.h  tvm_allocator.cc  tvm_allocator.h  util.h  xsched_ctrl.cc  xsched_ctrl.h
common/inf_tra_comm/: bip_helper.h  communicator.cc  communicator.h  info_board.cc  info_board.h  message_queue.cc  message_queue.h  shared_info.cc  shared_info.h
common/tensor/: dtype_helper.cc  dtype_helper.h  shape_helper.cc  shape_helper.h  tensor.cc  tensor.h  tensor_methods.cc  tensor_methods.h
data/: README.md
dcgmi_output/: dump_max.py  get-empiric-thread-1-0.1-ideal.txt  get-empiric-thread-1-0.2-ideal.txt  get-empiric-thread-1-0.5-ideal.txt  get-empiric-thread-1-1-ideal.txt  get-empiric-thread-1-16-ideal.txt  get-empiric-thread-1-2-ideal.txt  get-empiric-thread-1-32-ideal.txt  get-empiric-thread-1-4-ideal.txt  get-empiric-thread-1-8-ideal.txt
env/: Dockerfile
environment/: Dockerfile  Dockerfile.triton  requirements.txt
eval/: ablation.py  acc.py  (+31 more)
python/: CMakeLists.txt  setup.py
python/torch_col/: __init__.py  dataset.py  debug_server.py  hook.py  logging.cc  logging.h  sta.pyx  torch_col.pxd  torch_col.pyx  util.py  xsched.py
python/torch_col/csrc/: aten_type.cc  control_stub.cc  control_stub.h  convolution.cc  convolution.h  dlpack_convert.cc  dlpack_convert.h  init.cc  sta_helper.cc  sta_helper.h  tensor_impl.cc  tensor_impl.h  torch_helper.cc  torch_helper.h  unix_time.h  utils.h
python/torch_col/csrc/cudnn/: ConvShared.cpp  ConvShared.h  Conv_v7.cpp  Conv_v8.cpp  Macros.h  cudnn_custom.cc  cudnn_custom.h
python/torch_col/csrc/override_ops/: nonzero.cu  override_ops.h  shallow_copy.cc
pytorch/: CMakeLists.txt  pyproject.toml  setup.py
pytorch/torch_col/: __init__.py  _dataset.py  _dyanmic_dataset.py  accumulate.py  colocate_ctrl.py  ctrl_stub.cpp  ctrl_stub.pxd  ctrl_stub.pxi  ctrl_stub.pyx  dataset.py  debug_server.py  dist.py  dyanmic_batch.py  dynamic_batch.py  hook.py  lr_scheduler.py  main.cpp  main.pyx  memory.cpp  memory.pxi  memory.pyx  sm.pxi  trainer.py  util.py  xsched.py
pytorch/torch_col/_C/: __init__.py  _dist.pyi  _main.pyi
pytorch/torch_col/csrc/: config.cc  config.h  control_stub.cc  control_stub.h  cuda_allocator_plugin.cc  cuda_allocator_plugin.h  dist_ext.cc  dist_ext.h  dist_train_sync.cc  dist_train_sync.h  dynamic_batch.cc  dynamic_batch.h  fake_engine.cc  fake_engine.h  init.cc  init.h  mem_tagging.cc  mem_tagging.h  perf_model.cc  perf_model.h  torch_allocator_plugin.cc  torch_allocator_plugin.h  util.cc  util.h  xsched.cc  xsched.h
pytorch/torch_col/cython/: ctrl_stub.pxi  dist.pyx  main.pyx  util_cls.pxi
server/: CMakeLists.txt  block_queue.h  cache.cc  cache.h  config.cc  config.h  controller.cc  controller.h  infer_model.cc  infer_model.h  infer_model_store.cc  infer_model_store.h  job_queue.cc  job_queue.h  logging_as_glog.h  main.cc  model_infer_store.cc  model_infer_store.h  model_store.cc  model_store.h  model_train_store.cc  model_train_store.h  profiler.cc  profiler.h  resource_manager.cc  resource_manager.h  train_adjuster.cc  train_adjuster.h  train_launcher.cc  train_launcher.h  undef_log.h
server/control/: controller.cc  controller.h
server/grpc/: grcp_server.h  grpc_server.cc  grpc_server.h
server/llm/: kv_cache_pool.cc  kv_cache_pool.h  llm.cc  llm.h  llm.py  llm_torch_allocator_plugin.cc  llm_util.cc  llm_util.h  torch_allocator_plugin.cc  torch_allocator_plugin.h
server/llm/python/: llm.py  llm_server.pyi
server/model_store/: infer_model.cc  infer_model.h  infer_model_store.cc  infer_model_store.h  model_cache.cc  model_cache.h
server/models/: config
server/python/: control_stub.cc  control_stub.h  pycolserve.pxd  pycolserve.pyx  setup.py
server/schedule/: exec_queue.h  job_queue.cc  job_queue.h
server/sta/: cuda_allocator.cc  cuda_allocator.h  dtype_helper.cc  dtype_helper.h  init.cc  init.h  mempool.cc  mempool.h  mempool.hpp  mempool_policy.h  mempool_sampler.h  shape_helper.cc  shape_helper.h  tensor_methods.cc  tensor_methods.h  tensor_pool.cc  tensor_pool.h
server/train_control/: controller.cc  controller.h
server/triton_models/: config.conf  copy_model.py
server/triton_models-onnx/: copy_model.py
server/tvm/: executor.cc  executor.h  graph.cc  graph.h  graph_executor.cc  graph_executor.h  graph_executor_factory.cc  graph_executor_factory.h  texture.h  tvm.h  undef_log.h
(+161 files in other folders)
